--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
+    "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
