--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@prisma/client": "^6.7.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "daisyui": "^4.12.24",
+    "dayjs": "^1.11.13",
     "express": "^4.21.2",
+    "formidable": "^3.5.4",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.2.0",
     "postcss": "^8.5.1",
@@ -28,11 +35,11 @@
     "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "eslint": "9.19.0",
     "eslint-config-next": "15.1.6",
-    "prisma": "^6.5.0"
+    "prisma": "^6.7.0"
   }
 }
