--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@prisma/client": "^6.7.0",
+    "@twilio/conversations": "^2.6.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -34,6 +35,7 @@
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
+    "twilio": "^5.5.2",
     "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
