--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.2.0",
+    "nodemailer": "^7.0.0",
     "postcss": "^8.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
