--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie": "^1.0.2",
     "daisyui": "^4.12.24",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "formidable": "^3.5.4",
     "formik": "^2.4.6",
