--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
     "cSpell.words": [
+        "clientlogin",
+        "clientregister",
         "Cpath",
         "Csvg",
         "daygrid",
+        "Formateddate",
         "fullcalendar",
         "Gotomeeting",
         "justiceconnect",
+        "lawyerlogin",
+        "lawyerregister",
         "lenzi",
         "loggedin",
+        "NEXTAUTH",
         "Onee",
         "texl",
         "timegrid",
