--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "eslint": "9.19.0",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "prisma": "^6.7.0"
   }
