--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,17 @@
     "cSpell.words": [
         "appt",
         "fkey"
-    ]
+    ],
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/.retool_types/**": true,
+        "**/*tsconfig.json": true,
+        ".cache": true,
+        "retool.config.json": true
+    }
 }
