--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "clientlogin",
+        "clientlogout",
+        "clientrefresh",
         "clientregister",
         "Cpath",
         "Csvg",
         "daygrid",
+        "Dropleft",
         "Formateddate",
         "fullcalendar",
         "Gotomeeting",
