--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "Aliyu",
+        "Amaka",
         "clientlogin",
         "clientlogout",
         "clientrefresh",
@@ -11,15 +13,18 @@
         "Formateddate",
         "fullcalendar",
         "Gotomeeting",
+        "Harcourt",
         "justiceconnect",
         "lawyerlogin",
         "lawyerregister",
         "lenzi",
         "loggedin",
+        "Musa",
         "NEXTAUTH",
         "Onee",
         "texl",
         "timegrid",
-        "Toastify"
+        "Toastify",
+        "Uche"
     ]
 }
